crates/pawdoku/src/sudoku/snapshots/pawdoku__sudoku__puzzle__tests__snapshot_the_fixture_after_a_short_script.snap
---
source: crates/pawdoku/src/sudoku/puzzle.rs
expression: picture.trim_end()
---
place 4 at row 1, column 3
digits     given      conflicting
534.7....  xx..x....  .........
6..195...  x..xxx...  .........
.98....6.  .xx....x.  .........
8...6...3  x...x...x  .........
4..8.3..1  x..x.x..x  .........
7...2...6  x...x...x  .........
.6....28.  .x....xx.  .........
...419..5  ...xxx..x  .........
....8..79  ....x..xx  .........
status: Unsolved
is_full: false
is_consistent: true

place 5 at row 1, column 4: it conflicts with two givens
digits     given      conflicting
53457....  xx..x....  x..x.....
6..195...  x..xxx...  .....x...
.98....6.  .xx....x.  .........
8...6...3  x...x...x  .........
4..8.3..1  x..x.x..x  .........
7...2...6  x...x...x  .........
.6....28.  .x....xx.  .........
...419..5  ...xxx..x  .........
....8..79  ....x..xx  .........
status: Unsolved
is_full: false
is_consistent: false

place 2 at row 1, column 3: over the player's own 4
digits     given      conflicting
53257....  xx..x....  x..x.....
6..195...  x..xxx...  .....x...
.98....6.  .xx....x.  .........
8...6...3  x...x...x  .........
4..8.3..1  x..x.x..x  .........
7...2...6  x...x...x  .........
.6....28.  .x....xx.  .........
...419..5  ...xxx..x  .........
....8..79  ....x..xx  .........
status: Unsolved
is_full: false
is_consistent: false

erase row 1, column 4
digits     given      conflicting
532.7....  xx..x....  .........
6..195...  x..xxx...  .........
.98....6.  .xx....x.  .........
8...6...3  x...x...x  .........
4..8.3..1  x..x.x..x  .........
7...2...6  x...x...x  .........
.6....28.  .x....xx.  .........
...419..5  ...xxx..x  .........
....8..79  ....x..xx  .........
status: Unsolved
is_full: false
is_consistent: true
