crates/pawdoku/src/sudoku/snapshots/pawdoku__sudoku__puzzle__tests__snapshot_the_fixture_as_set.snap
---
source: crates/pawdoku/src/sudoku/puzzle.rs
expression: "render(&Puzzle::set(fixture()))"
---
digits     given      conflicting
53..7....  xx..x....  .........
6..195...  x..xxx...  .........
.98....6.  .xx....x.  .........
8...6...3  x...x...x  .........
4..8.3..1  x..x.x..x  .........
7...2...6  x...x...x  .........
.6....28.  .x....xx.  .........
...419..5  ...xxx..x  .........
....8..79  ....x..xx  .........
status: Unsolved
is_full: false
is_consistent: true
