crates/pawdoku/src/sudoku/snapshots/pawdoku__sudoku__puzzle__tests__snapshot_the_puzzles_debug.snap
---
source: crates/pawdoku/src/sudoku/puzzle.rs
expression: "format!(\"{:#?}\", Puzzle::set(fixture()))"
---
Puzzle {
    status: Unsolved,
    givens: [
        "53..7....",
        "6..195...",
        ".98....6.",
        "8...6...3",
        "4..8.3..1",
        "7...2...6",
        ".6....28.",
        "...419..5",
        "....8..79",
    ],
    digits: [
        "53..7....",
        "6..195...",
        ".98....6.",
        "8...6...3",
        "4..8.3..1",
        "7...2...6",
        ".6....28.",
        "...419..5",
        "....8..79",
    ],
    ..
}
